ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - GUI:                                                  |
|               * to fix: no errors on adding user (custom HP)    |
\_________________________________________________________________/

2007-11-01 Christian Hernmarck
	- DISTS:
		* Changed the init scripts for Redhat, Fedora, CentOS. Thanks to Sw1fty.

2007-10-30 Benedikt Heintel
	- DISTS:
		* Fixed #829: CentOS: Just on little fix for CentOS 5 in the Installmanual

2007-10-29 Benedikt Heintel
	- CONFIGS:
		* Fixed #828: disabled critical php functions

2007-10-28 Benedikt Heintel
	- TOOLS:
		* Updated PMA to 2.11.2
	- LANGUAGES:
		* Updated German (Thanks to translation Team)

2007-10-28 Raphael Geissert
    - ENGINE:
        * Fixed #824: IMAP SSL Traffic not counted (also added pop-ssl, https and mail delivery)

2007-10-27 Benedikt Heintel
	- CONFIGS:
		* Fixed #817: Wrong regex in awstats config
	- ENGINE:
		* Fixed: Error in AWStats Static
	- GUI:
		* Fixed #812: welcome mail for domain customers: "from" not rfc2822 conform

2007-10-24 Benedikt Heintel
	- DISTS:
		* Fixed #792: ubuntu: errors in make
		* Fixed #802: added Opensuse 10.3

2007-10-21 Raphael Geissert
    - GUI:
        * Fixed #803: Undefined variable: mail_status
        * Data compression information isn't displayed anymore when exporting language files

2007-10-20 Johannes Schobig
	- MAKEFILE:
		* Fixed #791: r877 - error when compile
		* Fixed #801: Fedora makefile is bad (thanks to graywolf)

2007-10-19 Raphael Geissert
    - CONFIGS:
        * Fixed #7: no user set to run awstats cronjobs
    - ENGINE:
        * Fixed #796: let aliases share the same mount point with a subdomain
    - GUI:
        * Fixed some issues with email forwarders (see #555)
        * Reduced number of entries in admin's log