@@ -17,19 +17,19 @@
 @daily root {BACKUP_ROOT_DIR}/ispcp-backup-ispcp noreport &>{LOG_DIR}/ispcp-backup-all-mngr.log
 
 # Remove config backups older than seven days
-@daily root find {CONF_DIR}/*/backup/* -maxdepth 0 -type f -mtime +7 -print | egrep '.*\.[0-9]+$' | xargs /bin/rm
+@daily root find {CONF_DIR}/*/backup/* -maxdepth 0 -type f -mtime +7 -print | egrep '.*\.[0-9]+$' | xargs -r /bin/rm
 
 # Remove Daemon Logs older than 14 days (except .gz files)
-@daily root find {LOG_DIR}/* -maxdepth 1 -type f -mtime +14 -print | egrep '.*\.gz$' | xargs /bin/rm
+@daily root find {LOG_DIR}/* -maxdepth 1 -type f -mtime +14 -print | egrep '.*\.gz$' | xargs -r /bin/rm
 
 # AWStats
 {AW-ENABLED}15	*/6	*	*	*	root {AWSTATS_ROOT_DIR}/awstats_updateall.pl now -awstatsprog={AWSTATS_ENGINE_DIR}/awstats.pl
 
 # Rootkit Hunter
-{RK-ENABLED}0 	0,12	*	*	*	root rkhunter --scan-knownbad-files --check-deleted --createlogfile --cronjob --createlogfile {RKHUNTER_LOG}>/dev/null 2>&1
+{RK-ENABLED}0 	0,12	*	*	*	root {RKHUNTER} --scan-knownbad-files --check-deleted --createlogfile --cronjob --createlogfile {RKHUNTER_LOG}>/dev/null 2>&1
 
 # Chkrootkit
-{CR-ENABLED}0 	0,12	*	*	*	root chkrootkit 2>&1 > {CHKROOTKIT_LOG}
+{CR-ENABLED}0 	0,12	*	*	*	root {CHKROOTKIT} 2>&1 > {CHKROOTKIT_LOG}
 
 # Look for and purge old sessions every 30 minutes
 0,30 *     * * *     root   {TOOLS_ROOT_DIR}/ispcpphptemp.sh >/dev/null 2>&1
